# ktane-mission-solver

./: .gitignore  Ktane Mission Solver.json  LICENSE  ModuleSolver readme.txt  README.md  mission goals.txt  pyproject.toml  reformat progress.txt  requirements.txt  setup.cfg  ttks.txt
ktane/: __init__.py  ask.py  directors.py  module_pools.py  vanilla.py
ktane/mods/: __init__.py  a.py  a_mods.py  c.py  c_mods.py  f.py  f_mods.py  t.py  t_mods.py  w.py
ktane/solverutils/: __init__.py  grid.py  maze.py  morse.py
missions/Road To Centurion/: 1.1 Limited Freedom.py  1.2 Brain Teaser.py  1.3 Going In Circles.py
missions/Vanilla/: 2.1 Something Old, Something New.py
missions/vanilla/: the_first_bomb.py
src/ktane/mods/: __init__.py  f_mods.py  t_mods.py  w_mods.py
src/ktane/solverutils/: grid.py  maze.py
test/: __init__.py  mocks.py  strategies.py  test_ask.py  test_directors.py
test_ktane/: __init__.py  mocks.py  test_ask.py
