[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
"name" = "ktane"
"version" = "0.1.0"

[tool.mypy]
# nonchecks
mypy_path = "src"
incremental = false
show_error_codes = true
show_column_numbers = true

# nondefault checks
disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true

warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

strict_equality = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_any_decorated = false

[[tool.mypy.overrides]]
module = "test.strategies"
disallow_any_explicit = false

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 90
